# silmari-writer

./: .gitignore  AGENTS.md  DEPLOYMENT.md  Recording.m4a  pyproject.toml  requirements.txt  vercel.json
.beads/: .gitignore  README.md  issues.jsonl  last-touched  metadata.json
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.claude/: mod.rs  settings.json
.claude/commands/: ci_commit.md  ci_describe_pr.md  commit.md  create_handoff.md  create_plan.md  create_tdd_plan.md  create_worktree.md  debug.md  implement_plan.md  implement_plan_with_checkpoint_worktree.md  implement_plan_with_checkpoints.md  local_review.md  reference_documentation.md  research_codebase.md
.claude/hooks/: mod.rs
.cursor/agents/: thoughts-locator.md
.cursor/commands/: ci_describe_pr.md  create_plan.md  debug.md  describe_pr.md  documentation.md  founder_mode.md  implement_plan.md  implement_plan_with_checkpoints.md  research_codebase.md  resume_handoff.md  review_plan.md  validate_plan.md
.cursor/rules/: baml-rules.mdc  devenv-basic-config.mdc  devenv-containers.mdc  devenv-languages.mdc  devenv-processes.mdc  devenv-tools.mdc  nix-build-phases.mdc  rust-async.mdc  (+14 more)
backend/: __init__.py  app.py
frontend/: .env.example  .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json  tsconfig.build.json  vercel.json  vitest.config.ts
specs/: ARCHITECTURE.md  SPECS.md  metrics-analytics.md  voice-loop.md  voice-recall-story-selection.md  voice-session-entry-note.md
thoughts/: global  maceo  shared
(+285 files in other folders)
